--- a/docs/周报/3.6-3.12周报.md
+++ b/docs/周报/3.6-3.12周报.md
@@ -4,9 +4,9 @@
 
 1. 完成内核态异步运行时的适配，跑通异步系统调用的测试。
 
-![image-20250312104651099](C:/Users/wangj/AppData/Roaming/Typora/typora-user-images/image-20250312104651099.png)
+![image-20250312104651099](https://s3.bmp.ovh/imgs/2025/03/12/966db58de14ec7c0.png)
 
-![image-20250312105027124](C:/Users/wangj/AppData/Roaming/Typora/typora-user-images/image-20250312105027124.png)
+![image-20250312105027124](https://s3.bmp.ovh/imgs/2025/03/12/b832f16a6a5cb709.png)
 
 ## 二、下周工作
 
