--- a/docs/周报/4.11.md
+++ b/docs/周报/4.11.md
@@ -1,8 +1,19 @@
+- 异步系统调用
+
 ![image-20250411115120406](C:/Users/wangj/AppData/Roaming/Typora/typora-user-images/image-20250411115120406.png)
 
-|      |                                                |
+![image-20250411135638495](C:/Users/wangj/AppData/Roaming/Typora/typora-user-images/image-20250411135638495.png)
+
+- 文件系统计划
+
+| 时间 | 检查点                                         |
 | ---- | ---------------------------------------------- |
 | 4.16 | 完成地址映射，块设备驱动适配，简单文件系统移植 |
 | 4.23 | 完成文件系统的异步化改造                       |
 | 4.30 | 如果还有时间，完成fat32文件系统                |
 
+
+
+- FPGA 目前服务器能用，代码这还有bug
+
+![image-20250411135703867](C:/Users/wangj/AppData/Roaming/Typora/typora-user-images/image-20250411135703867.png)
